--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -16,9 +16,9 @@
             </div>
             {{ partial:page_builder/block }}
             {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8 " } }}
-            <article class="prose mb-12 lg:mb-20 max-w-xl mx-auto">{{ header_paragraph }}</article>
+            <article class="prose-sm lg:prose mb-12 lg:mb-20 max-w-xl mx-auto">{{ header_paragraph }}</article>
             <div
-                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12 text-justify" id="artists">
+                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12" id="artists">
                 
         
                 
