--- a/resources/views/navigation/_main_desktop.antlers.html
+++ b/resources/views/navigation/_main_desktop.antlers.html
@@ -36,7 +36,7 @@
         {{ /nav:main }}
         <a target="_blank"
         rel=""
-        class="text-black bg-primary px-3 py-2 rounded-3xl text-sm transition hover:bg-osmosis-orange"
+        class="text-black bg-primary px-3 py-2 rounded-3xl text-sm transition font-mono hover:bg-osmosis-orange"
         href="{{ configuration:tickets_link }}">Buy tickets</a>
     </ul>
 </nav>
