--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -6,7 +6,7 @@
 <!-- /navigation/_main_mobile.antlers.html -->
 <nav
     x-data="{ mobileNavOpen: false }"
-    class="md:hidden"
+    class="md:hidden font-mono"
     aria-label="{{ trans:strings.main_navigation }}"
     x-trap.inert.noscroll.noautofocus="mobileNavOpen"
     @keyup.escape.stop.prevent="mobileNavOpen = false"
