--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -26,11 +26,11 @@
             <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400&display=swap" rel="stylesheet">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,300;1,14..32,300&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,300;1,14..32,400&display=swap" rel="stylesheet">
         </head>
 
         <body
-              class="flex flex-col min-h-screen bg-dark-blue text-primary selection:bg-primary/20 selection:text-highlight-yellow ">
+              class="flex flex-col min-h-screen bg-dark-blue text-neutral selection:bg-primary/20 selection:text-highlight-yellow ">
             {{ stack:seo_body }}
             {{ partial:statamic-peak-tools::snippets/noscript }}
             {{ partial:statamic-peak-tools::navigation/skip_to_content }}
