--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -6,7 +6,7 @@
 <!-- /layout/_footer.antlers.html -->
 <footer class="fluid-grid py-4 mt-auto">
     <div class="span-content flex flex-col gap-4 md:flex-row md:justify-center md:items-center">
-        <div class="flex flex-col gap-4 md:flex-row text-xs font-bold">
+        <div class="flex flex-col gap-4 md:flex-row text-xs font-mono">
             <span>
                 &copy; {{ now | format('Y') }} {{ configuration:copyright_name ?? config:app:name }}
             </span>
