--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 <!-- /layout/_header.antlers.html -->
-<header class="fixed w-full z-10 px-8 lg:py-4">
+<header class="fixed w-full z-10 px-8 lg:py-4 text-primary">
     <div class="span-content flex justify-between items-start">
         {{# Make partials you want to use for the header or use and edit premade examples like the following ones. #}}
         <div class="relative hidden lg:flex flex-col">
