--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -12,11 +12,11 @@
         <img class="max-w-[95px] mx-auto mt-8 absolute top-16 left-2" src="/visuals/OITT24-poster-date.png" alt="">
         </div>
         <div
-        class="osmo text-center absolute left-0 right-0 mt-3 order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap border-b border-primary/10 py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:border-0 lg:py-0 z-10">
+        class="osmo text-center absolute left-0 right-0 mt-3 order-first -mx-4 lg:flex flex-auto basis-full overflow-x-auto whitespace-nowrap py-4 font-mono text-sm text-primary sm:-mx-6 lg:order-none lg:mx-0 lg:basis-auto lg:py-0 z-10">
        <div class="mx-auto flex items-center content-center justify-center gap-4 px-4 font-mono">
            <p><time
                      datetime="{{ configuration:start_date }}">{{ configuration:start_date format="M d" }}</time>-<time
-                     datetime="{{ configuration:start_date }}">{{ configuration:start_date format="d" }}</time>
+                     datetime="{{ configuration:end_date }}">{{ configuration:end_date format="d" }}</time>
            </p>
            <svg aria-hidden="true"
                 viewBox="0 0 6 6"
