--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -4,9 +4,9 @@
 #}}
 
 <!-- /layout/_footer.antlers.html -->
-<footer class="fluid-grid py-4 mt-auto">
-    <div class="span-content flex flex-col gap-4 md:flex-row md:justify-center md:items-center">
-        <div class="flex flex-col gap-4 md:flex-row text-xs font-mono">
+<footer class="fluid-grid py-4 mt-auto text-primary">
+    <div class="span-content flex flex-row gap-4 justify-center md:items-center">
+        <div class="flex flex-row gap-4 text-xs font-mono">
             <span>
                 &copy; {{ now | format('Y') }} {{ configuration:copyright_name ?? config:app:name }}
             </span>
@@ -16,7 +16,7 @@
         </div>
 
         {{ if social_media:social_media }}
-            <div class="flex gap-x-2">
+            <div class="hidden lg:flex gap-x-2 ">
                 {{ social_media:social_media }}
                     <a class="text-primary hover:text-osmosis-orange transition" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">{{ svg :src="type" attr:class="w-3 h-3 overflow-visible fill-current" attr:alt="" attr:aria-hidden="true" }}</a>
                 {{ /social_media:social_media }}
