--- a/resources/views/navigation/_main_desktop.antlers.html
+++ b/resources/views/navigation/_main_desktop.antlers.html
@@ -20,7 +20,7 @@
                 >
                     <a
                         class="
-                            osmo flex items-center font-mono text-sm hover:text-osmosis-orange"
+                            osmo flex items-center font-mono hover:text-osmosis-orange"
                             href="#{{ title | slugify }}"
                         
                 
@@ -36,7 +36,7 @@
         {{ /nav:main }}
         <a target="_blank"
         rel=""
-        class="text-black bg-primary px-3 py-2 rounded-3xl text-sm transition font-mono hover:bg-osmosis-orange"
+        class="text-black bg-primary px-3 py-2 rounded-3xl transition font-mono hover:bg-osmosis-orange"
         href="{{ configuration:tickets_link }}">Buy tickets</a>
     </ul>
 </nav>
