--- a/resources/views/components/_notification.antlers.html
+++ b/resources/views/components/_notification.antlers.html
@@ -39,7 +39,7 @@
         <div class="ml-3">
             <h3
                 class="
-                    text-sm leading-5 font-bold
+                    text-base leading-5 font-bold
                     {{ switch(
                         (type == 'success') => 'text-green-800',
                         (type == 'notice') => 'text-yellow-800',
