--- a/resources/views/page_builder/_form.antlers.html
+++ b/resources/views/page_builder/_form.antlers.html
@@ -74,7 +74,7 @@
                                                 {{ /if }}
 
                                                 {{ if field:instructions && instructions_position != 'below' }}
-                                                    {{ partial:typography/p class="mt-1 font-normal text-sm" content="{ trans :key="field:instructions" }" }}
+                                                    {{ partial:typography/p class="mt-1 font-normal text-base" content="{ trans :key="field:instructions" }" }}
                                                 {{ /if }}
                                             </label>
                                         {{ /unless }}
@@ -84,12 +84,12 @@
 
                                             {{# Inline error. #}}
                                             <template x-if="form.invalid('{{ handle }}')">
-                                                <span class="mt-1 text-red-700 text-sm font-bold" x-text="form.errors.{{ handle }}"></span>
+                                                <span class="mt-1 text-red-700 text-base font-bold" x-text="form.errors.{{ handle }}"></span>
                                             </template>
 
                                             {{ if field:instructions && instructions_position === 'below' }}
                                                 <p id="{{ field:handle }}-instructions">
-                                                    {{ partial:typography/p as="span" class="text-sm" content="{ trans :key="field:instructions" }" }}
+                                                    {{ partial:typography/p as="span" class="text-base" content="{ trans :key="field:instructions" }" }}
                                                 </p>
                                             {{ /if }}
                                         </div>
