--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -22,7 +22,7 @@
                 
         
                 
-                {{ collection:artists sort="order" }}
+                {{ collection:artists sort="title" }}
                     {{ partial:components/artist_grid }}
                 {{ /collection:artists }}
         
