--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -41,10 +41,10 @@
             src="{{ glide:portrait format="webp" fit="crop_focal" square="500" quality="80" alt="{{ alt }}" }}"
             class=" object-contain mr-auto h-64">
                 <!-- Title -->
-                <h2 class="text-3xl font-bold title uppercase" :id="$id('{{ title | slugify }}')">{{ title }}</h2>
+                <h2 class="text-3xl font-bold font-artist title uppercase" :id="$id('{{ title | slugify }}')">{{ title }}</h2>
                 <!-- Content -->
 
-                <article class="prose prose-p:font-artist prose-p:font-bold font-artist text-neutral prose-a:text-primary hover:prose-a:text-osmosis-orange">{{ bio }}</article>
+                <article class="prose prose-p:font-artist font-artist text-neutral prose-a:text-primary hover:prose-a:text-osmosis-orange">{{ bio }}</article>
 
                 <!-- Buttons -->
                 <div class="flex justify-between items-center">
