--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 <!-- /layout/_footer.antlers.html -->
-<footer class="fluid-grid py-4 mt-auto text-primary">
+<footer class="fluid-grid py-4 mt-auto text-primary z-[2]">
     <div class="span-content flex flex-row gap-4 justify-center md:items-center">
         <div class="flex flex-row gap-4 text-xs font-mono">
             <span>
