--- a/resources/views/layout/_header.antlers.html
+++ b/resources/views/layout/_header.antlers.html
@@ -8,7 +8,7 @@
     <div class="span-content flex justify-between items-start">
         {{# Make partials you want to use for the header or use and edit premade examples like the following ones. #}}
         <div class="relative hidden lg:flex flex-col">
-        {{ partial:components/logo width="120" class="hidden lg:flex" }}
+        {{ partial:components/logo width="120" class="hidden lg:flex z-40" }}
         <img class="max-w-[95px] mx-auto mt-8 absolute top-16 left-2" src="/visuals/OITT24-poster-date.png" alt="">
         </div>
         <div
