--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -45,9 +45,8 @@ href="{{ configuration:tickets_link }}">Tickets</a>
                 @click="mobileNavOpen = false"  
                 class="
                     flex items-center font-mono text-xl hover:text-primary"
-                    href="{{ if segment_1 }}{{ homepage }}{{ /if }}#artists"
+                    href="{{ if segment_1 }}{{ config:app:url }}{{ /if }}#artists"
                 
-        {{ dump }}
             >
                 Artists
 
