--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -2,7 +2,7 @@
     @name Default
     @desc The default template with an outer wrapper grid as defined in tailwind.config.js. It makes sure all blocks on a page get evenly spaced without having to worry about margins or paddings.
 #}}
-<div class="relative flex flex-col min-h-screen bg-[url('../../public/visuals/oitt_hero_bg.jpg')]" >
+<div class="relative flex flex-col min-h-screen {{ if segment_1 }}z-[2]{{ /if }} bg-[url('../../public/visuals/oitt_hero_bg.jpg')]" >
     {{# <img src="/visuals/oitt_hero_bg.jpg" alt=""> #}}
     
     <div class="absolute bg-dark-blue/70 h-full w-full z-[1]"></div>
@@ -20,7 +20,7 @@
             {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8 " } }}
             <article class="prose-sm lg:prose mb-12 lg:mb-20 max-w-xl mx-auto prose-a:text-primary">{{ header_paragraph }}</article>
             <div
-                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12" id="artists">
+                 class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12 z-20" id="artists">
                 
         
                 
@@ -34,7 +34,7 @@
         
     </div>
     {{ /if }}
-    <main class="flex-grow py-12 md:py-16 lg:py-20 stack-12 md:stack-16 lg:stack-20 z-[2]" id="content">
+    <main class="flex-grow py-12 md:py-16 lg:py-20 stack-12 md:stack-16 lg:stack-20 {{ if segment_1 }}z-[2]{{ /if }}" id="content">
         
     
             {{# <h2 data-filter="goo-1" data-script="filter1" style="opacity: 0" class="opacity-0 text-7xl">Wave</h2> #}}
