--- a/resources/views/page_builder/_faq_from_entries.antlers.html
+++ b/resources/views/page_builder/_faq_from_entries.antlers.html
@@ -14,7 +14,7 @@
             
                 <div {{ if first }}x-data="{ open: true }"{{ else }}x-data="{ open: false }"{{ /if }}
                     id="{{ slug }}"
-                     class="">
+                     class="-z-1">
                     <dt>
                         <button type="button"
                                 x-description="Expand/collapse question button"
