--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -12,7 +12,7 @@
     @keyup.escape.stop.prevent="mobileNavOpen = false"
     x-cloak
 >
-<div class="left-0 fixed flex items-center justify-between w-full bottom-8 px-8">
+<div class="left-0 fixed flex items-center justify-between w-full bottom-8 px-8 hide-when-modal">
     <button
     @click.prevent.stop="mobileNavOpen = !mobileNavOpen"
     class=""
@@ -22,7 +22,7 @@
 >{{ partial:components/logo width="120" class=""}}</button>
 <a target="_blank"
 rel=""
-class=" text-black bg-primary px-3 py-3 rounded-full transition font-mono hover:bg-osmosis-orange"
+class=" text-black bg-primary px-3 py-3 rounded-full transition font-mono hover:bg-osmosis-orange hide-when-modal"
 href="{{ configuration:tickets_link }}">Tickets</a>
 </div>
 
