--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -38,7 +38,7 @@
         >
             <div
                 x-on:click.stop
-                x-trap.noscroll.inert="open"
+                x-trap.noscroll.inert.noautofocus="open"
                 class="relative w-full max-w-xl overflow-y-auto rounded-xl p-8 lg:p-12 shadow-lg bg-dark-blue flex flex-col justify-start space-y-6"
             >
                 <div class="absolute top-3 right-3 p-1 hover:cursor-pointer text-primary" x-on:click="toggleModal()">
