--- a/resources/views/components/_button.antlers.html
+++ b/resources/views/components/_button.antlers.html
@@ -18,7 +18,7 @@
                 (button_type === 'button') => 'max-w-full py-3 px-4 rounded-3xl leading-none no-underline select-none whitespace-nowrap',
             )}}
             {{ switch(
-                (button_type === 'inline' && !inverted) => 'text-neutral decoration-primary focus:outline-primary',
+                (button_type === 'inline' && !inverted) => 'text-white decoration-primary focus:outline-primary',
                 (button_type === 'button' && !inverted) => 'bg-primary text-black focus:outline-primary hover:bg-osmosis-orange transition',
             )}}
             {{ switch(
