--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -52,7 +52,7 @@
                 <!-- Title -->
                 <h2 class="text-3xl font-bold font-artist title uppercase" :id="$id('{{ title | slugify }}')">{{ title }}</h2>
                 <!-- Content -->
-                <article class="prose prose-p:font-artist font-artist text-neutral prose-a:text-primary hover:prose-a:text-osmosis-orange">{{ bio }}</article>
+                <article class="prose prose-p:font-artist font-artist text-white prose-a:text-primary hover:prose-a:text-osmosis-orange">{{ bio }}</article>
 
                 <!-- Buttons -->
                 <div class="flex justify-between items-center">
@@ -60,7 +60,7 @@
                         {{ if social_media }}
                         <div class="flex gap-x-3">
                             {{ social_media }}
-                            <a class="text-neutral" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">
+                            <a class="text-white" href="{{ prefix }}{{ handle }}" rel="noopener{{ type == 'mastodon' ?= ' me' }}" aria-label="{{ config:app:name }} {{ trans:strings.on }} {{ type | title }}" target="_blank">
                                 {{ svg :src="type" attr:class="w-4 h-4 overflow-visible fill-primary hover:fill-osmosis-orange transition" attr:alt="" attr:aria-hidden="true" }}
                             </a>
                             {{ /social_media }}
