--- a/resources/views/components/_consent_gate.antlers.html
+++ b/resources/views/components/_consent_gate.antlers.html
@@ -21,7 +21,7 @@
         {{ if _consent_embeds }}
             <div
                 x-show="!$store.consentBanner.getConsent() || !$store.consentBanner.getConsentValue('embeds')"
-                class="absolute z-10 inset-0 p-6 flex justify-center items-center bg-neutral/10 text-neutral/80"
+                class="absolute z-10 inset-0 p-6 flex justify-center items-center bg-neutral/10 text-white/80"
             >
                 <a @click.prevent="$store.consentBanner.revokeConsent()" href="#" class="underline">
                     {{ explainer ?? { trans:strings.consent_embeds_disabled } }}
