--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -2,24 +2,31 @@
     @name Default
     @desc The default template with an outer wrapper grid as defined in tailwind.config.js. It makes sure all blocks on a page get evenly spaced without having to worry about margins or paddings.
 #}}
-<div class="relative flex flex-col min-h-screen {{ if segment_1 }}z-[2]{{ /if }} bg-[url('../../public/visuals/oitt_hero_bg.jpg')]" >
+<div class="relative flex flex-col min-h-screen {{ if segment_1 }}z-[2]{{ /if }}" >
     {{# <img src="/visuals/oitt_hero_bg.jpg" alt=""> #}}
     
-    <div class="absolute bg-dark-blue/70 h-full w-full z-[1]"></div>
+
     {{ if !segment_1 }}
-        <div class="relative pt-12 lg:pt-20 z-[2]">
+        <div class="relative z-[2]">
             
             <div class="mx-auto relative">
                 
     
-                <div class="py-12 sm:pb-20 sm:pt-20 md:py-20 px-8 sm:px-6 lg:px-8">
-                    <img data-filter="goo-1" data-script="filter1" style="opacity: 0" class="lg:w-2/3 mx-auto" src="visuals/oitt_full_darker.svg" alt="">
+                <div class="py-12 sm:pb-20 sm:pt-20 md:py-20 px-8 sm:px-6 lg:px-8 lg:max-w-[80vw] mx-auto">
+                    <img src="visuals/hero.png" class="lg:w-2/3 mx-auto" alt="">
             </div>
             </div>
             {{ partial:page_builder/block }}
-            {{ block:title ?= { partial:typography/h2 :content="block:title" class="md:col-start-3 md:col-span-8 text-left mb-8 " } }}
-            <article class="prose-sm lg:prose mb-12 lg:mb-20 max-w-xl mx-auto prose-a:text-primary">{{ header_paragraph }}</article>
-            <div
+            <div class="flex flex-col items-center justify-center gap-y-0 leading-none text-osmosis-gray mb-12">
+                {{ first_wave_artists }}
+                    <span class="font-tf1 text-[70px] lg:text-[95px]" style="line-height: 0.7">{{ value }}</span>
+                {{ /first_wave_artists }}
+            </div>
+            <article class="prose-sm lg:prose my-20 lg:mb-20 max-w-xl mx-auto prose-a:text-primary text-center">
+                {{ early_bird_paragraph }}
+            </article>
+            <article class="prose-sm lg:prose mb-12 lg:mb-20 max-w-xl mx-auto prose-a:text-primary text-center">{{ header_paragraph }}</article>
+            {{# <div
                  class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12 z-20" id="artists">
                 
         
@@ -28,22 +35,18 @@
                     {{ partial:components/artist_grid }}
                 {{ /collection:artists }}
         
-            </div>
+            </div> #}}
             {{ /partial:page_builder/block }}
         </div>
-        
+        <main class="flex-grow py-12 md:py-16 lg:py-20 stack-12 md:stack-16 lg:stack-20 {{ if segment_1 }}z-[2]{{ /if }}" id="content">
+ 
+            {{ page_builder scope="block" }}
+                {{ partial src="page_builder/{type}" }} 
+            {{ /page_builder }}
+        </main>
     </div>
     {{ /if }}
-    <main class="flex-grow py-12 md:py-16 lg:py-20 stack-12 md:stack-16 lg:stack-20 {{ if segment_1 }}z-[2]{{ /if }}" id="content">
-        
-    
-            {{# <h2 data-filter="goo-1" data-script="filter1" style="opacity: 0" class="opacity-0 text-7xl">Wave</h2> #}}
-            
-            {{# <h1 class="text-left text-5xl font-bold text-primary" data-filter="goo-1" data-script="filter1" style="opacity: 0" >OSMOSIS IN THE TREES</h1> #}}
-        {{ page_builder scope="block" }}
-            {{ partial src="page_builder/{type}" }} 
-        {{ /page_builder }}
-    </main>
+
     
     <!-- End: /default.antlers.html -->
     
