--- a/resources/views/page_builder/_faq_from_entries.antlers.html
+++ b/resources/views/page_builder/_faq_from_entries.antlers.html
@@ -6,9 +6,9 @@
 
 <!-- /page_builder/_faq_entries.antlers.html -->
 {{ partial:page_builder/block }}
-    <div class="span-content max-w-xl mx-auto  divide-y divide-primary/10" id="info">
+    <div class="span-content max-w-xl mx-auto  divide-y divide-primary/10 " id="info">
         {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left" class=" text-left" } }}
-        <dl class="mt-6 divide-y divide-primary/10 md:col-span-6 md:col-start-4">
+        <dl class="mt-6 divide-y divide-primary/10 md:col-span-6 md:col-start-4 bg-osmosis-brown p-8">
         {{ block:faq_entries }}
 
             
@@ -56,7 +56,7 @@
                             </span>
                         </button>
                     </dt>
-                    <dd class="mt-3 mb-6 pr-12 text-neutral prose prose-p:text-base"
+                    <dd class="mt-3 mb-6 pr-12 text-white prose prose-p:text-base"
                         id="faq-{{ index }}"
                         x-show="open"
                         x-collapse.duration.450ms
