--- a/resources/views/typography/_h1.antlers.html
+++ b/resources/views/typography/_h1.antlers.html
@@ -3,10 +3,10 @@
     @desc The typography h1 partial to render an h1 with `class`, `as`, `color` and `content` attributes.
     @param* content The h1 content.
     @param as The wrapping element. Defaults to `h1`.
-    @param color Set a custom text color utility. Falls back to `text-neutral`.
+    @param color Set a custom text color utility. Falls back to `text-white`.
     @param class Add custom CSS classes.
 #}}
 
 <!-- /typography/_h1.antlers.html -->
-<{{ as or 'h1' }} class="text-2xl md:text-4xl font-bold leading-tight {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h1' }}>
+<{{ as or 'h1' }} class="text-2xl md:text-4xl font-bold leading-tight {{ color or 'text-white' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h1' }}>
 <!-- End: /typography/_h1.antlers.html -->
