--- a/resources/views/typography/_h2.antlers.html
+++ b/resources/views/typography/_h2.antlers.html
@@ -3,10 +3,10 @@
     @desc The typography h2 partial to render an h2 with `class`, `as`, `color` and `content` attributes.
     @param* content The h2 content.
     @param as The wrapping element. Defaults to `h2`.
-    @param color Set a custom text color utility. Falls back to `text-neutral`.
+    @param color Set a custom text color utility. Falls back to `text-white`.
     @param class Add custom CSS classes.
 #}}
 
 <!-- /typography/_h2.antlers.html -->
-<{{ as or 'h2' }} data-filter="goo-1" data-script="filter1" style="opacity: 0" class="text-4xl lg:text-5xl font-bold leading-tight font-headings {{ color or 'text-primary' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h2' }}>
+<{{ as or 'h2' }} class="text-4xl lg:text-6xl font-headings {{ color or 'text-white' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h2' }}>
 <!-- End: /typography/_h2.antlers.html -->
