--- a/resources/views/typography/_p.antlers.html
+++ b/resources/views/typography/_p.antlers.html
@@ -3,10 +3,10 @@
     @desc The typography paragraph partial to render a paragraph with `class`, `as`, `color` and `content` attributes.
     @param* content The p content.
     @param as The wrapping element. Defaults to `p`.
-    @param color Set a custom text color utility. Falls back to `text-neutral`.
+    @param color Set a custom text color utility. Falls back to `text-white`.
     @param class Add custom CSS classes.
 #}}
 
 <!-- /typography/_p.antlers.html -->
-<{{ as or 'p' }} class="mt-0 mb-8 last:mb-0 leading-relaxed {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'p' }}>
+<{{ as or 'p' }} class="mt-0 mb-8 last:mb-0 leading-relaxed {{ color or 'text-white' }} {{ class }}">{{ content | nl2br }}</{{ as or 'p' }}>
 <!-- End: /typography/_p.antlers.html -->
