--- a/resources/views/navigation/_main_mobile.antlers.html
+++ b/resources/views/navigation/_main_mobile.antlers.html
@@ -28,7 +28,7 @@ href="{{ configuration:tickets_link }}">Tickets</a>
 </div>
 
     <div
-        class="fixed inset-0 z-20 pt-8 px-8 pb-12 flex flex-col justify-end bg-dark-blue/95"
+        class="fixed inset-0 z-20 pt-8 px-8 pb-12 flex flex-col justify-end bg-osmosis-brown/95"
         x-show="mobileNavOpen"
         x-transition.origin.bottom.right
     >
