--- a/resources/views/components/_artist_grid.antlers.html
+++ b/resources/views/components/_artist_grid.antlers.html
@@ -39,7 +39,7 @@
             <div
                 x-on:click.stop
                 x-trap.noscroll.inert.noautofocus="open"
-                class="relative w-full max-w-xl overflow-y-auto rounded-xl p-8 lg:p-12 shadow-lg bg-dark-blue flex flex-col justify-start space-y-6"
+                class="relative w-full max-w-xl overflow-y-auto rounded-xl p-8 lg:p-12 shadow-lg bg-osmosis-brown flex flex-col justify-start space-y-6"
             >
                 <div class="absolute top-3 right-3 p-1 hover:cursor-pointer text-primary" x-on:click="toggleModal()">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
