--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -12,20 +12,20 @@
             <div class="mx-auto relative">
                 
     
-                <div class="py-12 sm:pb-20 sm:pt-20 md:py-20 px-8 sm:px-6 lg:px-8 lg:max-w-[80vw] mx-auto">
+                <div class="py-12 sm:pb-12 sm:pt-12 md:py-12 2xl:py-20 px-8 sm:px-6 lg:px-8 lg:max-w-[80vw] mx-auto">
                     <img src="visuals/hero.png" class="lg:w-2/3 mx-auto" alt="">
             </div>
             </div>
             {{ partial:page_builder/block }}
-            <div class="flex flex-col items-center justify-center gap-y-0 leading-none text-osmosis-gray mb-12">
+            <div class="flex flex-col items-center justify-center gap-y-0 leading-none text-osmosis-gray mb-8">
                 {{ first_wave_artists }}
-                    <span class="font-tf1 text-[70px] lg:text-[95px]" style="line-height: 0.7">{{ value }}</span>
+                    <span class="font-tf1 text-[70px] lg:text-[90px]" style="line-height: 0.7">{{ value }}</span>
                 {{ /first_wave_artists }}
             </div>
-            <article class="prose-sm lg:prose my-20 lg:mb-20 max-w-xl mx-auto prose-a:text-primary text-center">
+            <article class="prose-sm lg:prose my-12 2xl:py-14 max-w-xl mx-auto prose-a:text-primary text-center">
                 {{ early_bird_paragraph }}
             </article>
-            <article class="prose-sm lg:prose mb-12 lg:mb-20 max-w-xl mx-auto prose-a:text-primary text-center">{{ header_paragraph }}</article>
+            <article class="prose-sm lg:prose mb-12 xl:mb-20 max-w-xl mx-auto prose-a:text-primary text-center">{{ header_paragraph }}</article>
             {{# <div
                  class="max-w-xl mx-auto gap-x-10 flex-wrap flex justify-center mb-12 z-20" id="artists">
                 
@@ -38,7 +38,7 @@
             </div> #}}
             {{ /partial:page_builder/block }}
         </div>
-        <main class="flex-grow py-12 md:py-16 lg:py-20 stack-12 md:stack-16 lg:stack-20 {{ if segment_1 }}z-[2]{{ /if }}" id="content">
+        <main class="flex-grow py-12 md:py-16 lg:py-12 2xl:py-20 stack-12 md:stack-16 lg:stack-20 {{ if segment_1 }}z-[2]{{ /if }}" id="content">
  
             {{ page_builder scope="block" }}
                 {{ partial src="page_builder/{type}" }} 
