--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -26,7 +26,7 @@
         </head>
 
         <body
-              class="flex flex-col min-h-screen bg-dark-blue text-white selection:bg-primary/20 selection:text-highlight-yellow bg-[url('../../public/visuals/OITT_25_BG_19x6.jpg')] ">
+              class="flex flex-col min-h-screen bg-osmosis-brown text-white selection:bg-primary/20 selection:text-highlight-yellow bg-[url('../../public/visuals/OITT_25_BG_19x6.jpg')] ">
             {{ stack:seo_body }}
             {{ partial:statamic-peak-tools::snippets/noscript }}
             {{ partial:statamic-peak-tools::navigation/skip_to_content }}
