--- a/resources/views/page_builder/_faq_from_entries.antlers.html
+++ b/resources/views/page_builder/_faq_from_entries.antlers.html
@@ -8,7 +8,7 @@
 {{ partial:page_builder/block }}
     <div class="span-content max-w-xl mx-auto  divide-y divide-primary/10 " id="info">
         {{ block:title ?= { partial:typography/h2 :content="block:title" class="text-left" class=" text-left" } }}
-        <dl class="mt-6 divide-y divide-primary/10 md:col-span-6 md:col-start-4 bg-osmosis-brown p-8">
+        <dl class="mt-6 divide-y divide-primary/10 md:col-span-6 md:col-start-4 ">
         {{ block:faq_entries }}
 
             
