--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -59,13 +59,13 @@
                 </div>
                 <ul class="flex flex-col gap-y-2 mt-12 text-white font-serif underline underline-offset-2">
                     <li>
-                        <a class="text-underline" href="{{ configuration:instagram }}" target="_blank" rel="noopener">IG</a>
+                        <a class="hover:text-osmosis-orange" href="{{ configuration:instagram }}" target="_blank" rel="noopener">IG</a>
                     </li>
                     <li>
-                        <a class="text-underline" href="{{ configuration:soundcloud }}" target="_blank" rel="noopener">Soundcloud</a>
+                        <a class="hover:text" href="{{ configuration:soundcloud }}" target="_blank" rel="noopener">Soundcloud</a>
                     </li>
                     <li>
-                        <a class="text-underline" href="{{ configuration:discord }}" target="_blank" rel="noopener">Discord</a>
+                        <a class="hover:text" href="{{ configuration:discord }}" target="_blank" rel="noopener">Discord</a>
                     </li>
                 </ul>
                 
