--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -62,10 +62,10 @@
                         <a class="hover:text-osmosis-orange" href="{{ configuration:instagram }}" target="_blank" rel="noopener">IG</a>
                     </li>
                     <li>
-                        <a class="hover:text" href="{{ configuration:soundcloud }}" target="_blank" rel="noopener">Soundcloud</a>
+                        <a class="hover:text-osmosis-orange" href="{{ configuration:soundcloud }}" target="_blank" rel="noopener">Soundcloud</a>
                     </li>
                     <li>
-                        <a class="hover:text" href="{{ configuration:discord }}" target="_blank" rel="noopener">Discord</a>
+                        <a class="hover:text-osmosis-orange" href="{{ configuration:discord }}" target="_blank" rel="noopener">Discord</a>
                     </li>
                 </ul>
                 
