--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -22,7 +22,7 @@
                     <span class="font-tf1 text-[70px] lg:text-[90px]" style="line-height: 0.7">{{ value }}</span>
                 {{ /first_wave_artists }}
             </div>
-            <article class="prose-sm lg:prose 2xl:my-12 max-w-xl mx-auto prose-a:text-primary text-center">
+            <article class="prose-sm lg:prose mt-10 mb-6 xl:my-12 max-w-xl mx-auto prose-a:text-primary text-center">
                 {{ early_bird_paragraph }}
             </article>
             <article class="prose-sm lg:prose mb-12  max-w-xl mx-auto prose-a:text-primary text-center">{{ header_paragraph }}</article>
