--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -71,10 +71,10 @@
                 
             </div>
             {{ template_content }}
-            <div class="fixed lg:max-w-[20vw] bottom-6 right-1/2 translate-x-1/2 lg:top-8 lg:right-8 lg:translate-x-0 z-40">
+            <div class="fixed lg:max-w-[20vw] bottom-6 right-1/2 translate-x-1/2 lg:top-8 lg:right-8 lg:translate-x-0 text-center z-40 w-full lg:w-auto">
                 <a target="_blank"
                 rel=""
-                class="text-black bg-primary px-4 py-3 lg:px-3 lg:py-2 rounded-3xl transition font-mono hover:bg-osmosis-orange"
+                class="text-black bg-primary px-6 py-5 lg:px-4 lg:py-3 rounded-5xl transition font-mono hover:bg-osmosis-orange inline-block"
                 href="{{ configuration:tickets_link }}">Early bird tickets</a>
             </div>
             {{ partial:layout/footer }}
